idk just effing work?

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -8,7 +8,7 @@ name: Deploy Jekyll site to Pages
 
 on:
   # Runs on pushes targeting the default branch
-  push:å
+  push:
     branches: ["master"]
 
   # Allows you to run this workflow manually from the Actions tab
