--- a/_config.yml
+++ b/_config.yml
@@ -114,19 +114,18 @@ footer_text_color                         : "#666666"
 
 # Set the Sass partials directory, as we're using @imports
 sass:
-  style: :compressed # You might prefer to minify using :compressed
+  style: compressed # You might prefer to minify using :compressed
 
 # Exclude these files from your production _site
 exclude:
   - LICENSE
   - README.md
   - CNAME
-  - [vendor]
 
 collections:
   pages:
     output: true
-    permalink: /:path/
+    permalink: /:path
 
 # Markdown rendering
 markdown: kramdown
